--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -20,7 +20,7 @@ jobs:
 
       # dotnet is already installed from the previous step, so we can just run dotnet commands
       - name: Restore dependencies 📦
-        run: dotnet restore 
+        run: dotnet restore .\WebApi-Weather
 
       - name: Build App 🏗
         run: dotnet build -c Release --no-restore WebApi-Weather\WebApi-Weather.sln
