--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -40,5 +40,12 @@ jobs:
         uses: azure/webapps-deploy@v2
         with:
           app-name: WeatherForMe2
-          publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_SECRET }}  
+          publish-profile: ${{ Azure.secrets.AZURE_WEBAPP_PUBLISH_SECRET }}  
           package: ./out
+
+# <publishData>
+# <publishProfile profileName="WeatherForMe2 - Web Deploy" publishMethod="MSDeploy" publishUrl="weatherforme2.scm.azurewebsites.net:443" msdeploySite="WeatherForMe2" userName="$WeatherForMe2" userPWD="xDFEap6Se9xrN16E66wj2AJn7Jqx2qG3neuuYnhykP5cBpLvwymuXmqCcFo7" destinationAppUrl="https://weatherforme2.azurewebsites.net" SQLServerDBConnectionString="" mySQLDBConnectionString="" hostingProviderForumLink="" controlPanelLink="https://portal.azure.com" webSystem="WebSites"><databases />
+# </publishProfile>
+# <publishProfile profileName="WeatherForMe2 - FTP" publishMethod="FTP" publishUrl="ftps://waws-prod-am2-629.ftp.azurewebsites.windows.net/site/wwwroot" ftpPassiveMode="True" userName="WeatherForMe2\$WeatherForMe2" userPWD="xDFEap6Se9xrN16E66wj2AJn7Jqx2qG3neuuYnhykP5cBpLvwymuXmqCcFo7" destinationAppUrl="https://weatherforme2.azurewebsites.net" SQLServerDBConnectionString="" mySQLDBConnectionString="" hostingProviderForumLink="" controlPanelLink="https://portal.azure.com" webSystem="WebSites"><databases />
+# </publishProfile>
+# <publishProfile profileName="WeatherForMe2 - Zip Deploy" publishMethod="ZipDeploy" publishUrl="weatherforme2.scm.azurewebsites.net:443" userName="$WeatherForMe2" userPWD="xDFEap6Se9xrN16E66wj2AJn7Jqx2qG3neuuYnhykP5cBpLvwymuXmqCcFo7" destinationAppUrl="https://weatherforme2.azurewebsites.net" SQLServerDBConnectionString="" mySQLDBConnectionString="" hostingProviderForumLink="" controlPanelLink="https://portal.azure.com" webSystem="WebSites"><databases /></publishProfile></publishData>
