--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -40,7 +40,7 @@ jobs:
         uses: azure/webapps-deploy@v2
         with:
           app-name: WeatherForMe2
-          publish-profile: ${{ Azure.secrets.AZURE_WEBAPP_PUBLISH_SECRET }}  
+          publish-profile: ${{ Azure.AZURE_WEBAPP_PUBLISH_SECRET }}  
           package: ./out
 
 # <publishData>
